# School-Matura

./: .gitignore  CMakeLists.txt  Todo.txt  readme.txt
01-05 ONP LAB/: 27-zad8.cpp  27-zad9.cpp  46-zad6.cpp  61-zad6.cpp  61-zad7.cpp  quickSort.cpp  zad6.txt
01-18 Grafy/: 61-zad6.cpp  84-zad1.cpp  84-zad2.cpp  84.txt
01-18 Grafy/ekodom/: ekodom.xlsx
01-18 Grafy/hotel/: hotel.accdb  sql.txt
01-25 Liczby zmiennoprzecinkowe/: 111-zad6.cpp  120-zad1.cpp  121-zad8.cpp  128-zad4.cpp  148-zad4.cpp
02-15/: Karp-Rabin.cpp  Metoda Newtona-Rapshona.xlsx  Ruchy Browna.xlsx
02-21 Szyfrowanie/: RSA.cpp  decryptFile.txt  encryptFile.txt
03-11 Dzialania na systemach/: zad1.cpp
09-29 Dzialania na liczbach/: zad13.cpp
10-06 Systemy Liczbowe/: silniowy.cpp  trojkowy.cpp
10-11 WaterJugs/: zad11.cpp
10-13 Chciwe Algorytmy/: zad7.cpp  zad8.cpp
10-27 Liczby Pierwsze/: zad11.cpp  zad9.cpp
11-17 Szyfry/: cezar.cpp  cezarOut.txt  vigenere.cpp
11-24 Poszukujemy liczb/: 162-zad8.cpp  162-zad9.cpp  181-zad8.cpp  181-zad9.cpp  189-zad4.cpp  189-zad6.cpp  189-zad6.txt
11-31 Liczby Polpierwsze/: 211-zad7.cpp  225-zad6.cpp  232-zad1.cpp
12-01 Liczby Polpierwsze/: 196-zad4.cpp  196-zad5.cpp  211-zad7.cpp  232-zad1-out.txt
12-08 Euklides/: 254-zad9.cpp  270-zad9.cpp  291-zad7.cpp  291-zad8.cpp
12-15 Sortowanie/: 309-zad7.cpp  309-zad8.cpp  309-zad9.cpp  MergeSort.cpp
13-10 Chciwe Algorytmy/: zad9.cpp
27-10 Liczby Pierwsze/: zad10.cpp
29-09 Dzialania na liczbach/: zad11.cpp  zad14.cpp  zad15.cpp
Arkusze/Arkusz 06-2022/: zad4.1.cpp  zad4.2.cpp  zad4.3.cpp  zad4.4.cpp
