cmake_minimum_required(VERSION 3.23)
project(Matura)

set(CMAKE_CXX_STANDARD 14)

add_executable(29_09_zad11 "29-09 Dzialania na liczbach/zad11.cpp")
add_executable(29_09_zad13 "29-09 Dzialania na liczbach/zad13.cpp")
add_executable(29_09_zad14 "29-09 Dzialania na liczbach/zad14.cpp")
add_executable(29_09_zad15 "29-09 Dzialania na liczbach/zad15.cpp")

add_executable(06_10_silniowy "06-10 Systemy Liczbowe/silniowy.cpp")
add_executable(06_10_trojkowy "06-10 Systemy Liczbowe/trojkowy.cpp")

add_executable(13_10_zad7 "13-10 Chciwe Algorytmy/zad7.cpp")
add_executable(13_10_zad8 "13-10 Chciwe Algorytmy/zad8.cpp")
add_executable(13_10_zad9 "13-10 Chciwe Algorytmy/zad9.cpp")

add_executable(27_10_zad9 "27-10 Liczby Pierwsze/zad9.cpp")
add_executable(27_10_zad10 "27-10 Liczby Pierwsze/zad10.cpp")
add_executable(27_10_zad11 "27-10 Liczby Pierwsze/zad11.cpp")

add_executable(03_11_zad1 "03-11 Dzialania na systemach/zad1.cpp")
add_executable(10_11_zad11 "10-11 WaterJugs/zad11.cpp")