cmake_minimum_required(VERSION 3.23)
project(Matura)

set(CMAKE_CXX_STANDARD 14)

add_executable(09_29_zad11 "09-29 Dzialania na liczbach/zad11.cpp")
add_executable(09_29_zad13 "09-29 Dzialania na liczbach/zad13.cpp")
add_executable(09_29_zad14 "09-29 Dzialania na liczbach/zad14.cpp")
add_executable(09_29_zad15 "09-29 Dzialania na liczbach/zad15.cpp")

add_executable(10_06_silniowy "10-06 Systemy Liczbowe/silniowy.cpp")
add_executable(10_06_trojkowy "10-06 Systemy Liczbowe/trojkowy.cpp")

add_executable(10_13_zad7 "10-13 Chciwe Algorytmy/zad7.cpp")
add_executable(10_13_zad8 "10-13 Chciwe Algorytmy/zad8.cpp")
add_executable(10_13_zad9 "10-13 Chciwe Algorytmy/zad9.cpp")

add_executable(10_27_zad9 "10-27 Liczby Pierwsze/zad9.cpp")
add_executable(10_27_zad10 "10-27 Liczby Pierwsze/zad10.cpp")
add_executable(10_27_zad11 "10-27 Liczby Pierwsze/zad11.cpp")

add_executable(11_03_zad1 "11-03 Dzialania na systemach/zad1.cpp")
add_executable(11_10_zad11 "10-11 WaterJugs/zad11.cpp")

add_executable(11_17_cezar "11-17 Szyfry/cezar.cpp")
add_executable(11_17_vigenere "11-17 Szyfry/vigenere.cpp")

add_executable(11_24_162-zad8 "11-24 Poszukujemy liczb/162-zad8.cpp")
add_executable(11_24_162-zad9 "11-24 Poszukujemy liczb/162-zad9.cpp")

add_executable(11_24_181-zad8 "11-24 Poszukujemy liczb/181-zad8.cpp")
add_executable(11_24_181-zad9 "11-24 Poszukujemy liczb/181-zad9.cpp")
add_executable(11_24_189-zad4 "11-24 Poszukujemy liczb/189-zad4.cpp")
add_executable(11_24_189-zad6 "11-24 Poszukujemy liczb/189-zad6.cpp")
add_executable(11_31_196-zad4 "11-31 Liczby Polpierwsze/196-zad4.cpp")