cmake_minimum_required(VERSION 3.23)
project(Matura)

set(CMAKE_CXX_STANDARD 14)

add_executable(09-29_zad11 "09-29 Dzialania na liczbach/zad11.cpp")
add_executable(09-29_zad13 "09-29 Dzialania na liczbach/zad13.cpp")
add_executable(09-29_zad14 "09-29 Dzialania na liczbach/zad14.cpp")
add_executable(09-29_zad15 "09-29 Dzialania na liczbach/zad15.cpp")

add_executable(10-06_silniowy "10-06 Systemy Liczbowe/silniowy.cpp")
add_executable(10-06_trojkowy "10-06 Systemy Liczbowe/trojkowy.cpp")

add_executable(10-13_zad7 "10-13 Chciwe Algorytmy/zad7.cpp")
add_executable(10-13_zad8 "10-13 Chciwe Algorytmy/zad8.cpp")
add_executable(10-13_zad9 "10-13 Chciwe Algorytmy/zad9.cpp")

add_executable(10-27_zad9 "10-27 Liczby Pierwsze/zad9.cpp")
add_executable(10-27_zad10 "10-27 Liczby Pierwsze/zad10.cpp")
add_executable(10-27_zad11 "10-27 Liczby Pierwsze/zad11.cpp")

add_executable(11-03_zad1 "11-03 Dzialania na systemach/zad1.cpp")
add_executable(11-10_zad11 "10-11 WaterJugs/zad11.cpp")

add_executable(11-17_cezar "11-17 Szyfry/cezar.cpp")
add_executable(11-17_vigenere "11-17 Szyfry/vigenere.cpp")

add_executable(11-24_162-zad8 "11-24 Poszukujemy liczb/162-zad8.cpp")
add_executable(11-24_162-zad9 "11-24 Poszukujemy liczb/162-zad9.cpp")

add_executable(11-24_181-zad8 "11-24 Poszukujemy liczb/181-zad8.cpp")
add_executable(11-24_181-zad9 "11-24 Poszukujemy liczb/181-zad9.cpp")
add_executable(11-24_189-zad4 "11-24 Poszukujemy liczb/189-zad4.cpp")
add_executable(11-24_189-zad6 "11-24 Poszukujemy liczb/189-zad6.cpp")
add_executable(12-01_196-zad4 "12-01 Liczby Polpierwsze/196-zad4.cpp")
add_executable(12-01_196-zad5 "12-01 Liczby Polpierwsze/196-zad5.cpp")
add_executable(12-01_211-zad7 "12-01 Liczby Polpierwsze/211-zad7.cpp")
add_executable(12-01_225-zad6 "12-01 Liczby Polpierwsze/225-zad6.cpp")
add_executable(12-01_232-zad1 "12-01 Liczby Polpierwsze/232-zad1.cpp")
add_executable(12-08_254-zad9 "12-08 Euklides/254-zad9.cpp")
add_executable(12-08_270-zad9 "12-08 Euklides/270-zad9.cpp")
add_executable(12-08_291-zad7 "12-08 Euklides/291-zad7.cpp")
add_executable(12-08_291-zad8 "12-08 Euklides/291-zad8.cpp")
add_executable(12-15_309-zad7 "12-15 Sortowanie/309-zad7.cpp")
add_executable(12-15_309-zad8 "12-15 Sortowanie/309-zad8.cpp")
add_executable(12-15_309-zad9 "12-15 Sortowanie/309-zad9.cpp")
add_executable(01-05_27-zad8 "01-05 ONP LAB/27-zad8.cpp")
add_executable(01-05_27-zad9 "01-05 ONP LAB/27-zad9.cpp")
add_executable(01-05_quickSort "01-05 ONP LAB/quickSort.cpp")
add_executable(01-05_46-zad6 "01-05 ONP LAB/46-zad6.cpp")
add_executable(01-05_61-zad6 "01-18 Grafy/61-zad6.cpp")
add_executable(01-18_84-zad1 "01-18 Grafy/84-zad1.cpp")
add_executable(01-18_84-zad2 "01-18 Grafy/84-zad2.cpp")
add_executable(01_25_111-zad6 "01-25 Liczby zmiennoprzecinkowe/111-zad6.cpp")
add_executable(01_25_120-zad1 "01-25 Liczby zmiennoprzecinkowe/120-zad1.cpp")
add_executable(01_25_121-zad8 "01-25 Liczby zmiennoprzecinkowe/121-zad8.cpp")
add_executable(01_25_128-zad4 "01-25 Liczby zmiennoprzecinkowe/128-zad4.cpp")
add_executable(01_25_148-zad4 "01-25 Liczby zmiennoprzecinkowe/148-zad4.cpp")
add_executable(02_15_Karp-Rabin "02-15/Karp-Rabin.cpp")